# segy_sender

./: CMakeLists.txt  Makefile  README.md  circbuf.c  circbuf.h  cmake_install.cmake  copy_to_seiscomp3.sh  globdefs.h  link.c  link.h  log.c  log.h  my_cmd.h  my_defs.h  mythreads.c  mythreads.h  nmea.c  nmea.h  proto.c  proto.h  rtc.c  rtc.h  sender  sender.c  sender.h  sintab.c  sintab.h  start.c  start.h  utils.c  utils.h
